Remove DCHECK in OpenURL

On iOS11 beta5, it is possible for the application to be inactive when
calling openURL.
Remove the DCHECK.

Bug: 753734
Change-Id: I627038932c5d2359c3c5199234defddf035101a3
Reviewed-on: https://chromium-review.googlesource.com/607871
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492933}