ios/chrome/app/main_application_delegate.mm
@@ -5,7 +5,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/chrome/app/main_application_delegate.h"
 
-#include "base/ios/ios_util.h"
 #include "base/mac/foundation_util.h"
 #import "ios/chrome/app/application_delegate/app_navigation.h"
 #import "ios/chrome/app/application_delegate/app_state.h"
@@ -246,7 +245,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
   BOOL applicationActive =
       [application applicationState] == UIApplicationStateActive;
-  DCHECK(applicationActive || !base::ios::IsRunningOnIOS11OrLater());
 
   return [URLOpener openURL:url
           applicationActive:applicationActive
